@@ -1,6 +1,7 @@
 ver 0.23.1 (not yet released)
 * protocol
   - use decimal notation instead of scientific notation
+  - "load" supports relative positions
 * output
   - pipewire: attempt to change the graph sample rate
   - snapcast: fix time stamp bug which caused "Failed to get chunk"
